--- a/index.html
+++ b/index.html
@@ -4549,6 +4549,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="plugins/slick-1.8.0/slick.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/axios.js"></script>
+<script src="js/vuejs.js"></script>
 </body>
-
+<script>
+new Vue({
+  el: '#app',
+  data: {
+    message: 'Hello Vue.js!'
+  },
+	mounted(){
+		axios
+		.get('http://localhost:3000/answer')
+		.then(response => {}
+			console.log(response)
+			;)
+}
+	}
+})
+</script>
 </html>
